// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prompts getBuildingBlockTypePrompts 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "name": "Chart",
        "value": "chart",
      },
      Object {
        "name": "Filter Bar",
        "value": "filter-bar",
      },
      Object {
        "name": "Table",
        "value": "table",
      },
    ],
    "message": "Select a building block",
    "name": "buildingBlockType",
    "type": "list",
  },
]
`;

exports[`Prompts getChartBuildingBlockPrompts 1`] = `
Object {
  "questions": Array [
    Object {
      "additionalInfo": undefined,
      "choices": [Function],
      "dependantPromptNames": Array [
        "aggregationPath",
        "filterBarId",
      ],
      "groupId": undefined,
      "message": "View or Fragment File",
      "name": "viewOrFragmentFile",
      "placeholder": "Select a view or fragment file",
      "required": true,
      "selectType": "dynamic",
      "type": "list",
      "validate": [Function],
    },
    Object {
      "additionalInfo": undefined,
      "default": "Chart",
      "groupId": undefined,
      "message": "Building Block ID",
      "name": "id",
      "placeholder": "Enter a building block ID",
      "required": true,
      "type": "input",
      "validate": [Function],
    },
    Object {
      "additionalInfo": undefined,
      "choices": [Function],
      "dependantPromptNames": Array [
        "qualifier",
      ],
      "groupId": undefined,
      "message": "Entity",
      "name": "entity",
      "placeholder": "Select an entity",
      "required": true,
      "selectType": "dynamic",
      "type": "list",
    },
    Object {
      "additionalInfo": "Values are dependent on entity type",
      "choices": [Function],
      "groupId": undefined,
      "message": "Chart Qualifier",
      "name": "qualifier",
      "placeholder": "Select chart qualifier",
      "required": true,
      "selectType": "dynamic",
      "type": "list",
    },
    Object {
      "additionalInfo": undefined,
      "choices": [Function],
      "groupId": undefined,
      "message": "Aggregation Path",
      "name": "aggregationPath",
      "placeholder": "Enter an aggregation path",
      "required": true,
      "selectType": "dynamic",
      "type": "list",
    },
    Object {
      "additionalInfo": undefined,
      "groupId": undefined,
      "message": "Associated Filter Bar ID",
      "name": "filterBarId",
      "placeholder": "Select or enter a filter bar ID",
      "required": undefined,
      "selectType": "dynamic",
      "type": "list",
    },
    Object {
      "choices": Array [
        Object {
          "name": "Type",
          "value": "Type",
        },
        Object {
          "name": "Item",
          "value": "Item",
        },
        Object {
          "name": "Sort",
          "value": "Sort",
        },
      ],
      "message": "Chart Personalization",
      "name": "personalization",
      "placeholder": "Select chart personalization",
      "selectType": "static",
      "type": "checkbox",
    },
    Object {
      "choices": Array [
        Object {
          "name": "Single",
          "value": "Single",
        },
        Object {
          "name": "Multiple",
          "value": "Multiple",
        },
      ],
      "message": "Selection Mode",
      "name": "selectionMode",
      "selectType": "static",
      "type": "list",
    },
    Object {
      "message": "Selection Change Function",
      "name": "selectionChange",
      "placeholder": "Enter a selecton change function",
      "type": "input",
    },
  ],
}
`;

exports[`Prompts getFilterBarBuildingBlockPrompts 1`] = `
Object {
  "questions": Array [
    Object {
      "additionalInfo": undefined,
      "choices": [Function],
      "dependantPromptNames": Array [
        "aggregationPath",
      ],
      "groupId": undefined,
      "message": "View or Fragment File",
      "name": "viewOrFragmentFile",
      "placeholder": "Select a view or fragment file",
      "required": true,
      "selectType": "dynamic",
      "type": "list",
      "validate": [Function],
    },
    Object {
      "additionalInfo": undefined,
      "default": "FilterBar",
      "groupId": undefined,
      "message": "Building Block ID",
      "name": "id",
      "placeholder": "Enter a building block ID",
      "required": true,
      "type": "input",
      "validate": [Function],
    },
    Object {
      "additionalInfo": undefined,
      "choices": [Function],
      "groupId": undefined,
      "message": "Aggregation Path",
      "name": "aggregationPath",
      "placeholder": "Enter an aggregation path",
      "required": true,
      "selectType": "dynamic",
      "type": "list",
    },
    Object {
      "additionalInfo": undefined,
      "choices": [Function],
      "dependantPromptNames": Array [
        "qualifier",
      ],
      "groupId": undefined,
      "message": "Entity",
      "name": "entity",
      "placeholder": "Select an entity",
      "required": true,
      "selectType": "dynamic",
      "type": "list",
    },
    Object {
      "additionalInfo": "Values are dependent on entity type",
      "choices": [Function],
      "groupId": undefined,
      "message": "Selection Fields Qualifier",
      "name": "qualifier",
      "placeholder": "Select selection fields qualifier",
      "required": true,
      "selectType": "dynamic",
      "type": "list",
    },
    Object {
      "message": "Filter Function",
      "name": "filterChanged",
      "type": "input",
    },
    Object {
      "message": "Search Function",
      "name": "search",
      "type": "input",
    },
  ],
}
`;

exports[`Prompts getTableBuildingBlockPrompts 1`] = `
Object {
  "groups": Array [
    Object {
      "description": Array [
        "Select the \`View or Fragment File\` where you would like to insert the table building block and provide a \`Building Block ID\` to identify the table.",
        "Select an \`Entity Type\`, and a \`Line Item Qualifier\` you would like to use for the table building block.",
        "Select an \`Aggregation Path\` to determine where you would like the table to be placed on the page.",
        "If you would like to link the table to an existing filter bar, provide the \`Associated Filter Bar ID\`.",
      ],
      "id": "tableBuildingBlockProperties",
      "title": "Table Building Block Properties",
    },
    Object {
      "description": Array [
        "Configure your table using the properties below.",
      ],
      "id": "tableVisualizationProperties",
      "title": "Table Visualization Properties",
    },
  ],
  "questions": Array [
    Object {
      "additionalInfo": undefined,
      "choices": [Function],
      "dependantPromptNames": Array [
        "aggregationPath",
        "filterBarId",
      ],
      "groupId": "tableBuildingBlockProperties",
      "message": "View or Fragment File",
      "name": "viewOrFragmentFile",
      "placeholder": "Select a view or fragment file",
      "required": true,
      "selectType": "dynamic",
      "type": "list",
      "validate": [Function],
    },
    Object {
      "additionalInfo": undefined,
      "default": "Table",
      "groupId": "tableBuildingBlockProperties",
      "message": "Building Block ID",
      "name": "id",
      "placeholder": "Enter a building block ID",
      "required": true,
      "type": "input",
      "validate": [Function],
    },
    Object {
      "additionalInfo": undefined,
      "choices": [Function],
      "dependantPromptNames": Array [
        "qualifier",
      ],
      "groupId": "tableBuildingBlockProperties",
      "message": "Entity",
      "name": "entity",
      "placeholder": "Select an entity",
      "required": true,
      "selectType": "dynamic",
      "type": "list",
    },
    Object {
      "additionalInfo": "Values are dependent on entity type",
      "choices": [Function],
      "groupId": "tableBuildingBlockProperties",
      "message": "Line Item Qualifier",
      "name": "qualifier",
      "placeholder": "Select a line item qualifier",
      "required": true,
      "selectType": "dynamic",
      "type": "list",
    },
    Object {
      "additionalInfo": undefined,
      "choices": [Function],
      "groupId": "tableBuildingBlockProperties",
      "message": "Aggregation Path",
      "name": "aggregationPath",
      "placeholder": "Enter an aggregation path",
      "required": true,
      "selectType": "dynamic",
      "type": "list",
    },
    Object {
      "additionalInfo": undefined,
      "groupId": "tableBuildingBlockProperties",
      "message": "Associated Filter Bar ID",
      "name": "filterBarId",
      "placeholder": "Select or enter a filter bar ID",
      "required": undefined,
      "selectType": "dynamic",
      "type": "list",
    },
    Object {
      "choices": Array [
        Object {
          "name": "Responsive Table",
          "value": "ResponsiveTable",
        },
        Object {
          "name": "Grid Table",
          "value": "GridTable",
        },
      ],
      "default": "ResponsiveTable",
      "groupId": "tableVisualizationProperties",
      "message": "Table Type",
      "name": "type",
      "type": "list",
    },
    Object {
      "choices": Array [
        Object {
          "name": "Single",
          "value": "Single",
        },
        Object {
          "name": "Multiple",
          "value": "Multi",
        },
        Object {
          "name": "Auto",
          "value": "Auto",
        },
        Object {
          "name": "None",
          "value": "None",
        },
      ],
      "default": "Single",
      "groupId": "tableVisualizationProperties",
      "message": "Select a Selection Mode",
      "name": "selectionMode",
      "type": "list",
    },
    Object {
      "additionalInfo": undefined,
      "choices": Array [
        Object {
          "name": "False",
          "value": false,
        },
        Object {
          "name": "True",
          "value": true,
        },
      ],
      "default": true,
      "groupId": "tableVisualizationProperties",
      "message": "Display Header",
      "name": "displayHeader",
      "placeholder": undefined,
      "required": undefined,
      "selectType": "static",
      "type": "list",
    },
    Object {
      "groupId": "tableVisualizationProperties",
      "message": "Table Header Text",
      "name": "header",
      "type": "input",
    },
    Object {
      "choices": Array [
        Object {
          "name": "Sort",
          "value": "Sort",
        },
        Object {
          "name": "Column",
          "value": "Column",
        },
        Object {
          "name": "Filter",
          "value": "Filter",
        },
      ],
      "groupId": "tableVisualizationProperties",
      "message": "Table Personalization",
      "name": "personalization",
      "type": "checkbox",
    },
    Object {
      "choices": Array [
        Object {
          "name": "Page",
          "value": "Page",
        },
        Object {
          "name": "Control",
          "value": "Control",
        },
        Object {
          "name": "None",
          "value": "None",
        },
      ],
      "default": "None",
      "groupId": "tableVisualizationProperties",
      "message": "Select a Table Variant Management",
      "name": "variantManagement",
      "type": "list",
    },
    Object {
      "additionalInfo": undefined,
      "choices": Array [
        Object {
          "name": "False",
          "value": false,
        },
        Object {
          "name": "True",
          "value": true,
        },
      ],
      "default": false,
      "groupId": "tableVisualizationProperties",
      "message": "Enable Read Only Mode",
      "name": "readOnly",
      "placeholder": undefined,
      "required": undefined,
      "selectType": "static",
      "type": "list",
    },
    Object {
      "additionalInfo": undefined,
      "choices": Array [
        Object {
          "name": "False",
          "value": false,
        },
        Object {
          "name": "True",
          "value": true,
        },
      ],
      "default": false,
      "groupId": "tableVisualizationProperties",
      "message": "Enable Auto Column Width",
      "name": "enableAutoColumnWidth",
      "placeholder": undefined,
      "required": undefined,
      "selectType": "static",
      "type": "list",
    },
    Object {
      "additionalInfo": undefined,
      "choices": Array [
        Object {
          "name": "False",
          "value": false,
        },
        Object {
          "name": "True",
          "value": true,
        },
      ],
      "default": false,
      "groupId": "tableVisualizationProperties",
      "message": "Enable Data Export",
      "name": "enableExport",
      "placeholder": undefined,
      "required": undefined,
      "selectType": "static",
      "type": "list",
    },
    Object {
      "additionalInfo": undefined,
      "choices": Array [
        Object {
          "name": "False",
          "value": false,
        },
        Object {
          "name": "True",
          "value": true,
        },
      ],
      "default": false,
      "groupId": "tableVisualizationProperties",
      "message": "Enable Full Screen Mode",
      "name": "enableFullScreen",
      "placeholder": undefined,
      "required": undefined,
      "selectType": "static",
      "type": "list",
    },
    Object {
      "additionalInfo": undefined,
      "choices": Array [
        Object {
          "name": "False",
          "value": false,
        },
        Object {
          "name": "True",
          "value": true,
        },
      ],
      "default": false,
      "groupId": "tableVisualizationProperties",
      "message": "Enable Paste From Clipboard",
      "name": "enablePaste",
      "placeholder": undefined,
      "required": undefined,
      "selectType": "static",
      "type": "list",
    },
    Object {
      "additionalInfo": undefined,
      "choices": Array [
        Object {
          "name": "False",
          "value": false,
        },
        Object {
          "name": "True",
          "value": true,
        },
      ],
      "default": true,
      "groupId": "tableVisualizationProperties",
      "message": "Table Searchable Toggle",
      "name": "isSearchable",
      "placeholder": undefined,
      "required": undefined,
      "selectType": "static",
      "type": "list",
    },
  ],
}
`;
